--- a/css/styles.css
+++ b/css/styles.css
@@ -642,12 +642,208 @@
 /* done  */
 
 .top-brands{
+    position: relative;
     display: flex;
-    padding: 3rem;
+    padding: 4rem;
     justify-content: center;
     gap: 4.5rem;
     align-items: center;
+    /* border: 2px solid black; */
+    margin: 3rem 16rem;
+    background-color: #faf4f4;
 }
+
+.sony img{
+    width: 8rem;
+}
+
+.samsung img{
+    width: 8rem;
+}
+
+.dell img{
+    width: 8rem;
+}
+
+.nikon img{
+    width: 8rem;
+}
+
+.philips img{
+    width: 8rem;
+}
+
+.lenovo img{
+    width: 8rem;
+}
+
+/* done  */
+
+.blogs{
+    padding: 5rem;
+    align-items: center;
+    display: flex;
+    justify-content: center;    
+    gap: 75rem;
+}
+
+
+.blog-1{
+    font-size: 3rem;
+}
+
+.blog-2{
+    padding: .5rem 1.2rem;
+    background-color: black; 
+    color: white;
+    border: 2px solid black;
+    border-radius: 20rem 20rem;
+}
+
+/* done  */
+
+.detailes{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 0 0 5rem 0;
+}
+
+.clr-1{
+    color: #BBBBBB;
+}
+
+.details-1{
+    border-radius: .2rem .2rem; 
+    box-shadow: 0px 10px 30px #00000020;
+    margin: 0 0 4rem 0;
+}
+
+
+.ls-1{
+    width: 28rem;
+}
+
+.details-2{
+    border-radius: .2rem .2rem; 
+    box-shadow: 0px 10px 30px #00000020;
+    margin: 0 0 3rem 0;
+}
+
+.details-3{
+    border-radius: .2rem .2rem; 
+    box-shadow: 0px 10px 30px #00000020;
+    margin: 0 0 3rem 0;
+}
+
+/* done  */
+
+.search-1{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    gap: 15rem;
+    padding: 2rem 2rem;
+    background-color: blue;
+    color: white;
+    align-items: center; 
+    margin-top: -2rem;
+}
+
+.size-1{
+    font-size: 3rem;
+}
+
+.enter-1{
+    width: 4rem;
+    height: 3rem;
+    padding: .5rem .5rem;
+    background-color: black;   
+}
+
+.search-bar1 input{
+    width: 24rem;
+    height: 3rem;
+    border: none;
+    border-radius: 2px 0 0 2px;
+}
+
+.search-bar1{
+    display: flex;
+}
+
+.la-1{
+    font-size: .8rem;
+    color: #888888; 
+}
+
+/* Done  */
+
+.free-img{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.shipping{
+    display: flex;
+    justify-content: center;
+    gap: 9rem;
+    margin: 5rem 0;
+}
+
+.text{
+    font-size: 2rem;
+}
+
+/* done  */
+
+
+.the-end{
+    position: relative;
+    /* border: 2px solid black; */
+}
+
+.the-end{
+    display: flex;
+    gap: 15rem;
+    justify-content: center;
+    padding: 2rem;
+}
+
+
+.main-1{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem; 
+    font-size: 1rem;
+}
+
+.maine-3{
+    position: absolute;
+    top: 2rem;
+}
+
+
+.main-2{
+    display: flex;
+    flex-direction: column  ;
+    padding: -11rem;
+    gap: 1rem;
+    margin-bottom: 7rem;
+    /* border: 2px solid black; */
+}
+
+.over{
+    text-align: center;
+}
+
+.top{
+    font-size: 1.5rem;
+}
+
+
 
 
 
