--- a/css/querry.css
+++ b/css/querry.css
@@ -1,24 +1,30 @@
-@media (max-width:1090px){
-    html{
-        font-size: 10px;
-    }
+@media (max-width: 1090px) {
+  html {
+    font-size: 10px;
+  }
 }
 
-@media (max-width:1645px){
-    html{
-        font-size: 10px;
-    }
+@media (max-width: 1645px) {
+  html {
+    font-size: 10px;
+  }
 }
 
-@media (max-width:1058px){
-    html{
-        font-size: 10px;
-    }
+@media (max-width: 1058px) {
+  html {
+    font-size: 10px;
+  }
 }
 
-@media (max-width:1111px){
-    html{
-        font-size: 10px;
-    }
+
+
+
+
+@media (max-width: 1102px) {
+.detail {
+    gap: 2rem;
 }
+}
+
+
 
